--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,19 +7,24 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
-    background-position: center;
-    background-size: cover;
-
+    
     &.large {
         height: 380px;
     }
-
+    
     &:first-child {
         margin-right: 7.5px;
     }
-
+    
     &:last-child {
         margin-left: 7.5px;
+    }
+    
+    .background-image {
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
     }
 
     .content {
@@ -32,6 +37,7 @@
         border: 1px solid black;
         background-color: white;
         opacity: 0.7;
+        position: absolute;
 
         .title {
             font-weight: bold;
